[package]
name = "helix-cmd"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
helix-api.workspace = true
helix-common.workspace = true

tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-appender.workspace = true

num_cpus.workspace = true